# Convert2ApplePVoice

./: .gitignore  LICENSE  PRD.md  README.md  config.json  pyproject.toml  requirements.txt  test_voice.py
src/: config.py  main.py  ocr.py  tts.py  ui_automation.py
src/convert2applevoice/: __init__.py  __main__.py  audio.py  config.py  main.py  ocr.py
src/convert2applevoice/tts/: __init__.py  base.py  factory.py  macos.py  wrapper.py
tests/: test_basic.py
