[project]
name = "convert2applevoice"
version = "0.1.0"
description = "Automate Apple Personal Voice creation using TTS output"
authors = [
    { name = "Convert2ApplePVoice Contributors" }
]
dependencies = [
    "pyobjc-framework-Vision>=9.2",
    "pyobjc-framework-Quartz>=9.2",
    "pyobjc-framework-AppKit>=9.2",
    "pytest>=7.4.3",
    "rich>=13.7.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
